Bug 504869 - New behavior of "extract here" (replacing old "autodetect subfolder") overwrites existing directory without asking
Summary: New behavior of "extract here" (replacing old "autodetect subfolder") overwri...
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.04.1
Platform: Manjaro Linux
: NOR critical
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-27 15:29 UTC by php4fan
Modified: 2026-02-03 14:30 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description php4fan 2025-05-27 15:29:30 UTC
SUMMARY

I already mentioned this in a comment to https://bugs.kde.org/show_bug.cgi?id=483706 and, if I remember correctly, it was me who reopened that issue because of it, but there has been no reply. So here I am trying to report this as a separate issue (probably what I should have done in the first place). This is very serious and needs to be fixed, don't underestimate the danger of it please.

Relatively recently, the option "extract here (autodetect subfolder)" was removed from the context menu and the "extract here" option was changed to have basically the behavior of the old "extract here (autodetect subfolder)".

However, the new "extract here" option has a crucial flaw, in that, if a folder already exist with the name of the one that is going to be created, it will be written into without warning. If there are files and subdirectories with conflicting filenames inside the directory, you will get the OS's usual prompt about whether to overwrite etc, but otherwise (and anyway for the names that don't conflict), the files will be extracted into the existing directory silently. Either way, the result can be an absolute disaster, potentially unrecoverable.

Before you underestimate the seriousness of this, you need to consider that even if a folder exists with the same name, it could be a totally unrelated folder, in which case it's likely that many of the files and subfolder that you are going to extract have non-conflicting names, and these will just be extracted into the existing folder before you realize it and with no opportunity to stop it. So, even if you don't end up overwriting anything (because you do get a prompt before _that_ happens), you can end up with a mess that will take a lot of work to clean up.


STEPS TO REPRODUCE
1. have a zip file called mything.zip containing the following:
```
# contents of mything.zip
- mything         # folder
-- file1.txt
-- file2.txt
```
2. Next to it, within the same parent folder, have a folder called "mything"
3. Right-click on `mything.zip` and do "extract here"

OBSERVED RESULT
The files extracted from the zip file will be written into the existing folder "mything" with no prompt. If there are files or subfolder with conflicting names, the OS will ask you whether to rename them, overwrite (or write into in the case of directories) or skip; otherwise, the entire thing will happen silently. Either way, you won't be given a warning that the root folder already exist nor a choice of what to do.

EXPECTED RESULT
You should get a prompt telling you that a folder called "mything" already exist, and a choice whether to write into it, rename the folder being extracted, or cancel. Or at the very least, a warning and a choice whether to continue or cancel.

Note that the behavior of the old "extract here, autodetect subfolder" was to automatically rename the extracted directory appending a "(1)" (or "(2)" etc.) to the name. While it wasn't the best behavior possible in that it didn't give you a choice or a warning, it was a perfectly acceptable behavior.

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux 
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Kernel Version: 6.6.90-1-MANJARO (64-bit)
Graphics Platform: Wayland
Processors: 12 × 12th Gen Intel® Core™ i7-1255U
Memory: 15.3 GiB of RAM
Graphics Processor: Intel® Iris® Xe Graphics
Manufacturer: ASUSTeK COMPUTER INC.
Product Name: Vivobook_ASUSLaptop X1502ZA_F1502ZA
System Version: 1.0
Comment 1 Daniel 2025-05-28 16:28:27 UTC
I can confirm this issue on Debian Unstable (sid) using the latest KDE Plasma 6 environment.

When extracting an archive using "Extract Here", Dolphin writes the contents into an already existing folder without warning, even if that folder is unrelated. If there are no filename conflicts, the extraction happens silently, creating a mess that is hard to clean up. This is risky and unexpected behavior.

The previous "Extract Here (autodetect subfolder)" used to prevent this by creating a new folder like "folder (1)", which was much safer.

Please consider bringing back the separate option or at least add a prompt asking the user whether to write into the existing folder, rename the extracted one, or cancel.

**System information:**
- Operating System: Debian GNU/Linux unstable (sid)
- KDE Plasma Version: 6.3.x (latest from sid)
- KDE Frameworks Version: 6.x
- Qt Version: 6.7
- Kernel Version: 6.9.x (64-bit)
- Dolphin Version: latest from Debian sid
- Graphics Platform: X11

Thank you.
Comment 2 Bug Janitor Service 2025-12-10 20:19:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/ark/-/merge_requests/314
Comment 3 Méven 2026-01-24 10:35:53 UTC
Git commit 189f1f4e411086d996d4e581c425a380d160b899 by Méven Car, on behalf of Vladislav Kachegov.
Committed on 24/01/2026 at 10:35.
Pushed by meven into branch 'master'.

libarchive: prevent silent replacement of existing files by directory entries during extraction

Libarchive reports directories with trailing slashes (e.g. "foo/"). If a file named "foo" already exists, Ark previously allowed libarchive to silently replace it with a directory.

This change normalizes entry paths and prompts the user when a directory would replace an existing file. The reverse case (file over directory) is already handled and unchanged.

M  +38   -0    plugins/libarchive/libarchiveplugin.cpp

https://invent.kde.org/utilities/ark/-/commit/189f1f4e411086d996d4e581c425a380d160b899
Comment 4 php4fan 2026-01-24 13:47:24 UTC
> This change normalizes entry paths and prompts the user when a directory would replace an existing file. 
> The reverse case (file over directory) is already handled and unchanged.

Does this also fix the case of a directory overwriting a directory?
Comment 5 Méven 2026-02-03 14:30:14 UTC
Git commit 7e3d11a44b4873083ed3093cca164f268f4985cf by Méven Car, on behalf of Rafał Lichwała.
Committed on 03/02/2026 at 14:30.
Pushed by meven into branch 'master'.

extractiondialog: do not overwrite directory when extract

When we extract archive which contains single folder as top level entry
this action does not check if that folder already exists at destination
and simply overwrites its content.

This is completly unexpected and dangerous because may create mixed up directory
contents which would be hard to restore. This action does not even warn user
that such target directory exists and contents will be combined.

This affects actions triggered by regular "Extract Dialog" (when archive
is open on double-click) and context menu "Extract Here" action
(when right-click on archive in a folder).

This commit corrects this behavior in both places:

1. In "Extract Dialog" now there is the same warning message
as it already appears when extracting to existing subfolder

2. In "Extract Here" (batch-mode and context menu) action when existing
folder is detected it creates a new one (with common 'suggestName' mechanism)
and extracts content there - intentionally creating a nested folder in such a case.

M  +1    -0    app/batchextract.cpp
M  +12   -4    kerfuffle/extractiondialog.cpp
M  +5    -0    kerfuffle/extractiondialog.h
M  +15   -5    kerfuffle/jobs.cpp
M  +1    -0    part/part.cpp

https://invent.kde.org/utilities/ark/-/commit/7e3d11a44b4873083ed3093cca164f268f4985cf