extractiondialog: do not overwrite directory when extract

When we extract archive which contains single folder as top level entry
this action does not check if that folder already exists at destination
and simply overwrites its content.

This is completly unexpected and dangerous because may create mixed up directory
contents which would be hard to restore. This action does not even warn user
that such target directory exists and contents will be combined.

This affects actions triggered by regular "Extract Dialog" (when archive
is open on double-click) and context menu "Extract Here" action
(when right-click on archive in a folder).

This commit corrects this behavior in both places:

1. In "Extract Dialog" now there is the same warning message
as it already appears when extracting to existing subfolder

2. In "Extract Here" (batch-mode and context menu) action when existing
folder is detected it creates a new one (with common 'suggestName' mechanism)
and extracts content there - intentionally creating a nested folder in such a case.

BUG: 504869